# NX-MemTest

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: memory-test-algorithm.md
docs/superpowers/plans/: 2026-05-07-nx-memtest-implementation.md
docs/superpowers/specs/: 2026-05-07-nx-memtest-design.md
include/nxmt/: arena.h  patterns.h  platform.h  report.h  runner.h  startup.h  types.h
scripts/: check-toolchain.ps1
source/core/: arena.c  patterns.c  report.c  runner.c  startup.c
source/nx/: cpu_filler.c  cpu_filler.h  gpu_bench.c  gpu_bench.h  gpu_pump.c  gpu_pump.h  gpu_verify.glsl  main.c  platform_nx.c
tests/: test_arena.c  test_patterns.c  test_report.c  test_runner.c  test_smoke.c  test_startup_policy.c
